	(refresh_current_folder_and_file_part): Return a RefreshStatus.
	We filter out incomplete hostnames here (typing
	"sftp://incompl[tab]" will error out), as well as completely
	unparsable input.
	(start_explicit_completion): Process the result from
	refresh...().  Here we present the actual feedback about only
	being able to display local folders for local_only=TRUE.
	
2009-01-22  Matthew Barnes  <mbarnes@redhat.com>

	Bug 568334 – Constructor properties for GtkAction

	* gtk/gtkaction.c (gtk_action_class_init): Make all properties
	G_PARAM_CONSTRUCT except "action-group".

2009-01-22  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkicontheme.c (gtk_icon_theme_has_icon): g_return_if_fail()
	on icon_name != NULL so we get a warning instead of a crash here.

2009-01-21  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2009-01-21  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtkentry.c: Don't show windows that may not exist

2009-01-21  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtklabel.c: Implement select-by-words for selectable labels.

2009-01-21  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkcursor-win32.c: Rename static local functions and
	variables to not have any unnecessary _ or _gdk_win32 prefix.

	* gdk/win32/gdkcursor-win32.c (hcursor_from_type): Implement
	creating a GDK_BLANK_CURSOR.

2009-01-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Change the Caps Lock warning to the more
	neutral "Caps Lock is on". Requested by Wouter Bolsterlee

2009-01-21  Matthias Clasen  <mclasen@redhat.com>

	Bug 568552 – gtk_combo + gtk entry in invisible mode takes 100% cpu

	* gtk/gtkentry.c: Fix an expose loop caused by raising windows out
	of an expose handler. Also, don't show the 'Caps Lock' warning for
	activated input methods, since that makes it permanently shown
	for some locales. It should not be that necessary, now that we
	do show preedit text even in password entries. Pointed out by
	Frederic Crozat.
