@@ -29,6 +29,9 @@
 	(start_explicit_completion): Process the result from
 	refresh...().  Here we present the actual feedback about only
 	being able to display local folders for local_only=TRUE.
+	(commit_completion_and_refresh): Don't do anything with the result
+	of refresh...(), since this function doesn't get called during
+	completion-related interaction.
 	
 2009-01-22  Matthew Barnes  <mbarnes@redhat.com>
 
